# Dubhacks-2025

./: .gitignore  .gitmodules  .ignore  CMakeLists.txt  README.md
assets/levels/: 1.json
assets/shaders/: main_pass.wgsl  physics.wgsl
src/: camera.cpp  camera.h  engine.cpp  engine.h  input.cpp  input.h  levels.cpp  levels.h  main.cpp  timer.h  types.h
src/Backend/: binding.cpp  binding.h  buffer.cpp  buffer.h  context.cpp  context.h  pipeline.cpp  pipeline.h  texture.cpp  texture.h
src/Manager/: scene.cpp  scene.h
src/Parsers/: level.cpp  level.h  model.cpp  model.h
src/UI/: context.cpp  context.h
